[project]

name = "face_recognition"
version = "0.1.0"
description = "Face recognition and processing"
requires-python = ">=3.10"

dependencies = [
    "facenet_pytorch",
    "keras_facenet", 
    "scikit-fda",
    "seaborn",
    "deepface",
    "insightface",
    "opencv-python",
    "onnxruntime-gpu",
    "tf-keras",
    "ruff",
    "tensorflow==2.12",
    "typer",
    "pandas",
    "matplotlib"
]
